Fixed a minor iphone screen overflow

--- a/ericstassen.css
+++ b/ericstassen.css
@@ -7,6 +7,7 @@
     height:100%;
     overflow-x: hidden; 
     overflow-y: hidden;
+    min-width:350px;
    }
    body {
     height: 100%;
