--- a/signin.css
+++ b/signin.css
@@ -7,7 +7,7 @@
     height:100%;
     overflow-x: hidden; 
     overflow-y: hidden;
-    min-width:400px;
+    min-width:350px;
    }
    body {
     height: 100%;
